; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_json1.c_jsonQuoteFunc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_json1.c_jsonQuoteFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JSON_SUBTYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**)* @jsonQuoteFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jsonQuoteFunc(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @UNUSED_PARAM(i32 %8)
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @jsonInit(i32* %7, i32* %10)
  %12 = load i32**, i32*** %6, align 8
  %13 = getelementptr inbounds i32*, i32** %12, i64 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @jsonAppendValue(i32* %7, i32* %14)
  %16 = call i32 @jsonResult(i32* %7)
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* @JSON_SUBTYPE, align 4
  %19 = call i32 @sqlite3_result_subtype(i32* %17, i32 %18)
  ret void
}

declare dso_local i32 @UNUSED_PARAM(i32) #1

declare dso_local i32 @jsonInit(i32*, i32*) #1

declare dso_local i32 @jsonAppendValue(i32*, i32*) #1

declare dso_local i32 @jsonResult(i32*) #1

declare dso_local i32 @sqlite3_result_subtype(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
